--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,20 @@
 	<title>Simple Web</title>
 </head>
 <body>
-<h1>Welcome Page</h1>
+	
+	
+<!--Block tags occupy entire row startes with new line EX: div,p,li,... -->
+	<div>
+		<h1> Home Page</h1>
+	</div>
+	
+	<div>
+		<span>Sample text</span>
+		<span>more text</span>
+	</div>
+
+	<div> 
+		<h3> Footer ...</h3>
+	</div>
 </body>
 </html>
