--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Simple Web</title>
+	<link rel="stylesheet" media="screen" href="../stylesheets/style.css">
 </head>
 <body>
 	
@@ -11,7 +12,7 @@
 	</div>
 	
 	<div>
-		<span>Sample text</span>
+		<p><span>Sample text</span></p>
 		<span>more text</span>
 	</div>
 
